# helheim.backend

./: Dockerfile  pyproject.toml
src/: context.py  exceptions.py  main.py  settings.py
src/accounts/: exceptions.py  model.py  persistence.py  service.py
src/auth/: dependencies.py  model.py  service.py  utils.py
src/realms/: dependencies.py  exceptions.py  model.py  persistence.py  service.py
src/routers/: accounts.py  auth.py  realms.py
src/shared/: dynamodb.py  ec2.py  lambda_client.py  s3.py  utils.py
