[project]
name = "helheim.backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3[crt]>=1.40.72",
    "fastapi[standard]>=0.121.2",
    "mangum>=0.19.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "types-boto3[essential]>=1.40.72",
]
